<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/labelKmAtual"

        android:textSize="@dimen/sizeTextView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/etQuilometragemAtual"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="number"

        android:hint="@string/hintExKm"

        android:textSize="@dimen/sizeEditText"
        />

    <TextView

        android:paddingTop="@dimen/sizePaddingCadActivity"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/labelLitrosAbastecidos"

        android:textSize="@dimen/sizeTextView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/etLitrosAbastecidos"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="numberDecimal"

        android:hint="@string/hintExLitros"

        android:textSize="@dimen/sizeEditText"
        />

    <TextView

        android:paddingTop="@dimen/sizePaddingCadActivity"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/labelDataAbastecimento"

        android:textSize="@dimen/sizeTextView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/etDataAbastecimento"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="date"

        android:hint="@string/hintExData"
        android:textSize="@dimen/sizeEditText"
        />

    <TextView

        android:paddingTop="@dimen/sizePaddingCadActivity"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/labelPosto"

        android:textSize="@dimen/sizeTextView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <Spinner
        android:id="@+id/spinnerSelecionaPosto"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center|bottom"

        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnConfirmar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/btnConfirmar"

            android:textAllCaps="false"
            android:textSize="@dimen/btnSize"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"

            android:onClick="clicouNoConfirmar"
            />
    </LinearLayout>

</LinearLayout>