<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.cesco.am3pooautonomia.MainActivity"
    >

    <Button
        android:id="@+id/btnAddAbastecimento"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/sizePaddingBetweenButtons"

        android:text="@string/btnNovoAbastecimento"

        android:textAllCaps="false"
        android:textSize="@dimen/btnSize"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"

        android:onClick="clicouNoBotaoAddAbastecimento"

        />

    <Button
        android:id="@+id/btnVisualizarAbastecimento"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btnVisualizarAbastecimentos"

        android:textAllCaps="false"
        android:textSize="@dimen/btnSize"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"

        android:onClick="clicouNoBotaoVisualizarAbastecimentos"

        />

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:paddingBottom="100dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelAutonomiaAtual"

            android:textSize="@dimen/sizeLabelAutonomia"

            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            />

        <TextView

            android:id="@+id/tvAutonomiaAtual"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 km/l"

            android:textSize="@dimen/sizeLabelTextRelevante"

            android:textStyle="bold"
            android:textColor="@color/colorBlack"

            />
    </LinearLayout>

</LinearLayout>
